Production/Production/src/objects/Billing_Account__c.object
<CustomObject>
    <fields>
        <fullName>ACQUISITION_CHANNEL__c</fullName>
        <label>Acquisition Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Key__c</fullName>
        <externalId>true</externalId>
        <label>Trio Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Amt__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Date__c</fullName>
        <label>Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle_Name__c</fullName>
        <label>Bill Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Day_in_Month__c</fullName>
        <label>Billing Days in Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPW_Brand__c</fullName>
        <label>CPW Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_DUE__c</fullName>
        <label>Current Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURRENT_OVERDUE__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Current Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Limit__c</fullName>
        <label>Call Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collection Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Class__c</fullName>
        <label>Credit Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Tier__c</fullName>
        <label>Credit Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Platform__c</fullName>
        <label>Billing Platform</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatment_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Treatment Path</label>
        <referenceTo>Collection_Path__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Treatment_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Treatment Step</label>
        <referenceTo>Collection_Step__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAYS_121_150__c</fullName>
        <label>DAYS 121-150</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAYS_151_180__c</fullName>
        <label>DAYS 151-180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAYS_181_210__c</fullName>
        <label>DAYS 181-210</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCA_Allocated_Date_DWH__c</fullName>
        <label>DCA Allocated Date(DWH)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCA_DWH__c</fullName>
        <label>DCA(DWH)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCA_Description_DWH__c</fullName>
        <label>DCA Description(DWH)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPUTED_BALANCE__c</fullName>
        <label>Disputed Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disconnected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address1__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposure_Value__c</fullName>
        <label>Exposure Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Suppression_Reason_DWH__c</fullName>
        <label>Invoice Suppression Reason(DWH)</label>
        <picklist>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Activity on Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Suppression B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed After Cease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Suppression E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Suppression C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAST_INVOICE_AMOUNT__c</fullName>
        <label>Last Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_INVOICE_BALANCE__c</fullName>
        <label>Last Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAST_INVOICE_DATE__c</fullName>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAST_INVOICE_DUE_DATE__c</fullName>
        <label>Last Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAST_PAYMENT_DATE__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <formula>Exposure_Value__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Charge__c</fullName>
        <label>Monthly Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <formula>IF(ISBLANK(LAST_INVOICE_DATE__c), 

IF(DAY(TODAY()) &lt; Billing_Day_in_Month__c, DATE(YEAR(TODAY()), MONTH(TODAY()), Billing_Day_in_Month__c), 
 DATE( 
(IF(MONTH(TODAY())= 12, YEAR(TODAY()) + 1, YEAR(TODAY()))),
(IF(MONTH(TODAY())= 12, 1, MONTH(TODAY()) + 1)),
 Billing_Day_in_Month__c )
)
,

DATE( 
(IF(MONTH(LAST_INVOICE_DATE__c)= 12, YEAR(LAST_INVOICE_DATE__c) + 1, YEAR(LAST_INVOICE_DATE__c))),
(IF(MONTH(LAST_INVOICE_DATE__c)= 12, 1, MONTH(LAST_INVOICE_DATE__c) + 1)),
 Billing_Day_in_Month__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Treatment_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Treatment Step</label>
        <referenceTo>Collection_Step__c</referenceTo>
        <relationshipLabel>Billing Accounts (Next Step)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OVER_361_DAYS__c</fullName>
        <label>OVER 361 DAYS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Defaulted_Date__c</fullName>
        <label>Payment Defaulted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Defaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Defaulted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Desc__c</fullName>
        <label>Payment Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promise_to_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promise to Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinstate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Date__c</fullName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <label>Status Flag</label>
        <picklist>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone-Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspected-Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement-Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Communication_Type__c</fullName>
        <label>Step Communication Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Over_Due__c</fullName>
        <formula>CURRENT_OVERDUE__c +  DAYS_31_60__c +  DAYS_61_90__c +  DAYS_91_120__c +  DAYS_121_150__c +  DAYS_151_180__c +  DAYS_181_210__c +  DAYS_211_240__c +  DAYS_241_270__c +  DAYS_271_300__c +  DAYS_301_330__c +  DAYS_331_360__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Over Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Billing_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Treatment_Code__c</fullName>
        <label>Treatment Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Exempt_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Exempt Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Path__c</fullName>
        <label>Treatment Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trio_Treatment_Path_Code__c</fullName>
        <label>Trio Treatment Path Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trio_Treatment_Path__c</fullName>
        <label>Trio Treatment Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trio_Treatment_Step_Code__c</fullName>
        <label>Trio Treatment Step Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trio_Treatment_Step__c</fullName>
        <label>Trio Treatment Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNALLOCATED_BALANCE__c</fullName>
        <label>Unallocated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNBILLED_AMOUNT__c</fullName>
        <label>Unbilled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unbilled_Usage_Limit__c</fullName>
        <label>Unbilled Usage Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>Accounts_with_Payment_Plans</fullName>
        <columns>NAME</columns>
        <columns>Current_Treatment_Step__c</columns>
        <columns>CURRENT_OVERDUE__c</columns>
        <columns>MRC__c</columns>
        <columns>Next_Treatment_Step__c</columns>
        <columns>Exposure_Value__c</columns>
        <columns>Call_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Treatment_Path__c</field>
            <operation>equals</operation>
            <value>Payment Plan</value>
        </filters>
        <label>Accounts with Payment Plans</label>
    </listViews>
    <listViews>
        <fullName>Accounts_with_Promise_to_Pay</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Current_Treatment_Step__c</columns>
        <columns>CURRENT_OVERDUE__c</columns>
        <columns>MRC__c</columns>
        <columns>Next_Treatment_Step__c</columns>
        <columns>Exposure_Value__c</columns>
        <columns>Call_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Treatment_Path__c</field>
            <operation>equals</operation>
            <value>P2P for less than 30 days Debt</value>
        </filters>
        <filters>
            <field>Current_Treatment_Path__c</field>
            <operation>equals</operation>
            <value>P2P for 30-60 days Debt</value>
        </filters>
        <label>Accounts with Promise to Pay</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Treatment_Path__c</columns>
        <columns>Current_Treatment_Step__c</columns>
        <columns>Payment_Defaulted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>